IE 11 Fix for the address line block in checkout, making sure the fields wrap properly.

--- a/web/themes/custom/hm-public-theme/static/sass/shared/forms/_check-out.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/shared/forms/_check-out.scss
@@ -77,6 +77,21 @@
     display: flex;
   }
 
+  #edit-shipping-information-shipping-profile-address-0-address-container4 {
+    flex-flow: row wrap;
+
+    .form-item.form-item-shipping-information-shipping-profile-address-0-address-locality.form-type-textfield,
+    .form-item.form-item-shipping-information-shipping-profile-address-0-address-administrative-area.form-type-select {
+      min-width: 200px;
+
+      input {
+        flex-basis: 100%;
+      }
+
+    }
+
+  }
+
   .form-item-shipping-information-shipping-profile-address-0-address-country-code.form-type-select,
   .form-item-shipping-information-shipping-profile-address-0-address-administrative-area.form-type-select {
     @extend %form-field--wrap;
